--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
-<div>
+<div class="m-2">
     <div>
         <h1 class="text-center"> The Daily Prthom-alo</h1>
     </div>
     <div>
-        <h6>Click on a date to see news headline</h6>
+        <h6 class="my-1 mx-5">Click on a date to see news headline</h6>
         <div *ngFor="let n of news">
-            <button [ngClass]="{ 'active' : isValue == n.newsDate }" (click)="headline(n.newsDate)" class="my-1">
+            <button [ngClass]="{ 'active' : isValue == n.newsDate }" (click)="headline(n.newsDate)" class="my-1 mx-5">
                 {{n.newsDate}}
             </button>
 
             <div  *ngIf="n.newsDate === clickedDate">
-                <ul *ngFor="let headLine of n.headline">
+                <ul class="mx-5" *ngFor="let headLine of n.headline">
                     <li>{{headLine.title}}</li>
                 </ul>
             </div>
